# poetry_pypackage

./: .bumpversion.cfg  README.md  cookiecutter.json  noxfile.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml
hooks/: post_gen_project.py  post_gen_project.sh
tests/: test_bake.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .flake8  LICENSE  Makefile  README.md  dodo.py  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: CI.yml
{{cookiecutter.project_slug}}/docs/: contributing.md
{{cookiecutter.project_slug}}/tests/: test_obvious.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  py.typed  {{cookiecutter.project_slug}}.py
